[package]
name = "DOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
axum = { version = "0.6", features = ["macros"] }

http = "0.2.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tabuid = { git = "https://gitlab.thearmabois.com/engineering/ccp/tabuid.git" }
tabresp = { git = "https://gitlab.thearmabois.com/engineering/ccp/tabresp.git" }

chrono = { version = "0.4.23", features = ["serde"] }
